--- a/authentication-jwt-react-node/server/package.json
+++ b/authentication-jwt-react-node/server/package.json
@@ -7,7 +7,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
